ignore vivado data

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,18 @@
 .ssh
 .vscode-server
 .wget-hsts
+.gnupg
+.java
+.mozilla
+.Xilinx
+Desktop
+Downloads
+vivado_patch_dir
+.flexlmrc
+.Xauthority
+vivado.jou
+vivado.log
+vivado.zip
+wget-log
 archive
 archive_tgz
